added chunk elaboration

--- a/notebooks/chunks/size_chunks.ipynb
+++ b/notebooks/chunks/size_chunks.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "this file have to find what is the biggest chunk in all our 3 dimension.<br>\n",
-    "it generates the \"chunks.csv\" "
+    "Since my pc (obviously) Cant Handle (estimated) 7 terabytes of chunks, <br>\n",
+    "Everytime i'll delete all the files, before, i have to search which chunk<br>\n",
+    "is the heviest and, if his size is more then the before heviest, i'll replace it <br>"
    ]
   },
   {
@@ -28,6 +30,7 @@
     "## Getting size of a file\n",
     "from os.path import getsize\n",
     "from os import listdir\n",
+    "\n",
     "## Clear Output\n",
     "from IPython.display import clear_output"
    ]
@@ -41,219 +44,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prev_path = \"../data/server/chunks/\"\n",
-    "def chunk_to_info(chunk_name, world):\n",
-    "    _, x_num, z_num, _ = chunk_name.split('.')\n",
-    "    x_cord = int(x_num) << 5\n",
-    "    z_cord = int(z_num) << 5\n",
-    "    size = getsize(prev_path + world + '/' + chunk_name)\n",
-    "    return [x_num, z_num, x_cord, z_cord, size]"
+    "prev_path = \"../../data/server/chunks/1_\"\n",
+    "def return_size(chunk_name, world):\n",
+    "    return getsize(prev_path + world + '/' + chunk_name)\n",
+    "\n",
+    "## For remove hidden files https://stackoverflow.com/questions/7099290/how-to-ignore-hidden-files-using-os-listdir\n",
+    "def listdir_nohidden(path):\n",
+    "    for f in listdir(path):\n",
+    "        if not f.startswith('.'):\n",
+    "            yield f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99.98896087905369\n"
+      "Chunk 32*32: r.-119.-114\n"
      ]
     }
    ],
    "source": [
     "worlds_name = [\"overworld\", \"nether\", \"end\"]\n",
-    "series = {}\n",
-    "chunks_total = 471052\n",
     "idx = 0\n",
-    "base_dataframe = {\"x_num\" : [], \"z_num\" : [], \"x_cord\" : [], \"z_cord\" : [], \"size\" : []}\n",
+    "max_ = {\"name\" : \"-1\", \"size\" : getsize(\"./current_heaviest/max.nbt\"), \"world\" : \"-1\", \"chunk_32\" : \"-1\"}\n",
     "## Iterate for all our possibilites\n",
     "for i in worlds_name:\n",
-    "    ## Adding new dataframe\n",
-    "    series[i] = pd.DataFrame(base_dataframe)\n",
-    "    ## Iterate for every chunks\n",
-    "    for chunk in listdir(prev_path + i):\n",
-    "        ## Taking all our values\n",
-    "        values = chunk_to_info(chunk, i)\n",
-    "        ## Add new row\n",
-    "        series[i] = series[i].append(\n",
-    "                    {\"x_num\" : values[0], \"z_num\" : values[1],\n",
-    "                     \"x_cord\" : values[2], \"z_cord\" : values[3],\n",
-    "                     \"size\" : values[4]}, ignore_index = True)\n",
-    "        idx += 1\n",
-    "        if idx % 500 == 0:\n",
-    "            clear_output()\n",
-    "            print(idx / chunks_total * 100)"
+    "    ## Iterate for every 32*chunks\n",
+    "    for chunks_32 in listdir_nohidden(prev_path + i):\n",
+    "        \n",
+    "        clear_output()\n",
+    "        print(\"Chunk 32*32: \" + chunks_32)\n",
+    "        \n",
+    "        ## Iterate for every chunks in the folder\n",
+    "        for chunk in listdir(prev_path + i + \"/\" + chunks_32):\n",
+    "            size_ = return_size(chunk, i + \"/\" + chunks_32 + \"/\" )\n",
+    "            ## If his size is the bigger\n",
+    "            if max_[\"size\"] < size_:\n",
+    "                ## Set the new max_\n",
+    "                max_[\"size\"] = size_\n",
+    "                max_[\"name\"] = chunk\n",
+    "                max_[\"world\"] = i\n",
+    "                max_[\"chunk_32\"] = chunks_32\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'listdir' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-92830e629a0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprev_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"nether\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'listdir' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "a = listdir(prev_path + \"nether\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nether_chunks = len(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "79331"
+       "{'name': '252.nbt',\n",
+       " 'size': 3638696,\n",
+       " 'world': 'overworld',\n",
+       " 'chunk_32': 'r.-101.2258'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(a)"
+    "max_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chunks_total = overworld_chunks + nether_chunks + end_chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "471052"
+       "3638696"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chunks_total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15209"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "series[\"end\"][\"size\"].idxmax()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "182029"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "series[\"overworld\"][\"size\"].idxmax()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "x_num               0\n",
-       "z_num               0\n",
-       "x_cord              0\n",
-       "z_cord              0\n",
-       "size      1.49012e+07\n",
-       "Name: 182029, dtype: object"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "series[\"overworld\"].loc[182029]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'999'"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "series[\"overworld\"].x_num.max()"
+    "getsize(\"./current_heaviest/max.nbt\")"
    ]
   },
   {
