resume kill and death maps created a new directory "results" that contains png / csv with results refractored a bit Created new file for transforming uuid to username added some new columns on kill db started making results for kill db

--- a/notebooks/kill_and_death/killer.ipynb
+++ b/notebooks/kill_and_death/killer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kill_db = pd.read_csv(\"../data/server/plan_kills.csv\", index_col = \"id\")\n",
+    "kill_db = pd.read_csv(\"../../data/server_table/plan_kills.csv\", index_col = \"id\")\n",
     "## Removing the column \"server_uuid\"\n",
     "kill_db.drop(columns = [\"server_uuid\"], inplace = True)\n",
     "date = []\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Read our session\n",
-    "session = pd.read_pickle(\"../data/ufficial/pickle/session.pkl\")"
+    "session = pd.read_pickle(\"../../data/ufficial/pickle/session.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -154,12 +154,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Uuid to Name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Import uuid\n",
+    "uuid_db = pd.read_pickle(\"../../data/ufficial/pickle/uuid.pkl\")\n",
+    "## Make both time the same exponent\n",
+    "kill_db[\"date\"] = kill_db[\"date\"].astype(np.int64) / 1E5\n",
+    "uuid_db[\"time\"] = uuid_db[\"time\"] * 1E1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Function for finding a nickname given uuid and time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getNickName(uuid, time):\n",
+    "    result = \"\"\n",
+    "    for row in uuid_db[uuid_db[\"uuid\"] == uuid].iterrows():\n",
+    "        if row[1][\"time\"] <= time or result == \"\":\n",
+    "            result = row[1][\"nickname\"]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lets iterate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kill_db[\"killer_name\"] = kill_db.apply(lambda x : getNickName(x[\"killer_uuid\"], x[\"date\"]), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kill_db[\"victim_name\"] = kill_db.apply(lambda x : getNickName(x[\"victim_uuid\"], x[\"date\"]), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Export csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
