--- a/notebooks/kill_and_death/KillDeathResults.ipynb
+++ b/notebooks/kill_and_death/KillDeathResults.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,18 +314,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vClass = vClass.set_index(\"Victim\")\n",
+    "#vClass = vClass.set_index(\"Victim\")\n",
     "## Export this\n",
     "vClass.to_csv(\"../../results/kills/victimClass.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,18 +354,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "iClass = iClass.set_index(\"Item\")\n",
+    "#iClass = iClass.set_index(\"Item\")\n",
     "## Export this\n",
     "iClass.to_csv(\"../../results/kills/itemClass.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,18 +403,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sClass = sClass.set_index(\"Killer\")\n",
+    "#sClass = sClass.set_index(\"Killer\")\n",
     "## Export this\n",
     "sClass.to_csv(\"../../results/kills/spawnClass.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
