--- a/notebooks/kill_and_death/killer.ipynb
+++ b/notebooks/kill_and_death/killer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,46 +174,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Function for finding a nickname given uuid and time"
+    "#### Lets find everything we want\n",
+    "so, i dunno why but, for some reasons, some uuid have multiple names. that's why of the iloc[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getNickName(uuid, time):\n",
-    "    result = \"\"\n",
-    "    for row in uuid_db[uuid_db[\"uuid\"] == uuid].iterrows():\n",
-    "        if row[1][\"time\"] <= time or result == \"\":\n",
-    "            result = row[1][\"nickname\"]\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Lets iterate"
+    "kill_db[\"killer_name\"] = kill_db.apply(lambda x : uuid_db[uuid_db[\"uuid\"] == x[\"killer_uuid\"]].iloc[0].nickname,\\\n",
+    "                                       axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kill_db[\"killer_name\"] = kill_db.apply(lambda x : getNickName(x[\"killer_uuid\"], x[\"date\"]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kill_db[\"victim_name\"] = kill_db.apply(lambda x : getNickName(x[\"victim_uuid\"], x[\"date\"]), axis=1)"
+    "kill_db[\"victim_name\"] = kill_db.apply(lambda x : uuid_db[uuid_db[\"uuid\"] == x[\"victim_uuid\"]].iloc[0].nickname,\\\n",
+    "                                       axis=1)"
    ]
   },
   {
@@ -225,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
