added name referring to the uuid

--- a/notebooks/session_analysis/analysis_core_protector.ipynb
+++ b/notebooks/session_analysis/analysis_core_protector.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Core_session dataset\n",
     "core_session = pd.read_csv(\"../../data/core_protector/co_session.csv\")\n",
     "## pla_session dataset\n",
-    "server_session = pd.read_csv(\"../../data/server/plan_sessions.csv\", index_col = \"id\")\n",
+    "server_session = pd.read_csv(\"../../data/server_table/plan_sessions.csv\", index_col = \"id\")\n",
     "## co_user dataset (id -> uuid)\n",
     "co_user = pd.read_csv(\"../../data/core_protector/co_user.csv\", index_col = \"id\")"
    ]
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,14 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 99.9277298920611%\n"
+      "Time: 0.3179037006110109%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -264,22 +273,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Add name to uuid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Import uuid\n",
+    "uuid_db = pd.read_pickle(\"../../data/ufficial/pickle/uuid.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "server_session[\"name\"] = server_session.apply(lambda x : uuid_db[uuid_db[\"uuid\"] == x[\"uuid\"]].iloc[0].nickname,\\\n",
+    "                                       axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exporting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "server_session.to_csv(\"../../data/ufficial/csv/session.csv\")\n",
-    "server_session.to_pickle(\"../../data/ufficial/csv/session.pkl\")"
+    "server_session.to_pickle(\"../../data/ufficial/pickle/session.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +351,7 @@
        "      <th>y_left</th>\n",
        "      <th>z_join</th>\n",
        "      <th>z_left</th>\n",
-       "      <th>id</th>\n",
+       "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -333,7 +369,7 @@
        "      <td>73</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>SalC1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -349,7 +385,7 @@
        "      <td>73</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>19</td>\n",
+       "      <td>SalC1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -365,7 +401,7 @@
        "      <td>73</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>20</td>\n",
+       "      <td>SalC1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -381,7 +417,7 @@
        "      <td>69</td>\n",
        "      <td>126</td>\n",
        "      <td>127</td>\n",
-       "      <td>21</td>\n",
+       "      <td>BoatMeat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -397,7 +433,7 @@
        "      <td>85</td>\n",
        "      <td>45</td>\n",
        "      <td>45</td>\n",
-       "      <td>22</td>\n",
+       "      <td>8chan_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -429,7 +465,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>spit4520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493200</th>\n",
@@ -445,7 +481,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>CactusDuper</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493201</th>\n",
@@ -461,7 +497,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>WittleRain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493202</th>\n",
@@ -477,7 +513,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>mcrcortex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493203</th>\n",
@@ -493,7 +529,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>spit4520</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -527,23 +563,23 @@
        "493202        0.0     0.0       0.0    NaN    NaN    NaN    NaN    NaN    NaN   \n",
        "493203        0.0     0.0       0.0    NaN    NaN    NaN    NaN    NaN    NaN   \n",
        "\n",
-       "         id  \n",
-       "1        18  \n",
-       "2        19  \n",
-       "3        20  \n",
-       "4        21  \n",
-       "5        22  \n",
-       "...     ...  \n",
-       "493199  NaN  \n",
-       "493200  NaN  \n",
-       "493201  NaN  \n",
-       "493202  NaN  \n",
-       "493203  NaN  \n",
+       "               name  \n",
+       "1             SalC1  \n",
+       "2             SalC1  \n",
+       "3             SalC1  \n",
+       "4          BoatMeat  \n",
+       "5            8chan_  \n",
+       "...             ...  \n",
+       "493199     spit4520  \n",
+       "493200  CactusDuper  \n",
+       "493201   WittleRain  \n",
+       "493202    mcrcortex  \n",
+       "493203     spit4520  \n",
        "\n",
        "[493203 rows x 13 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
