Finished Session Results

--- a/notebooks/session_analysis/analysis_core_protector.ipynb
+++ b/notebooks/session_analysis/analysis_core_protector.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +44,25 @@
     "server_session = pd.read_csv(\"../../data/server_table/plan_sessions.csv\", index_col = \"id\")\n",
     "## co_user dataset (id -> uuid)\n",
     "co_user = pd.read_csv(\"../../data/core_protector/co_user.csv\", index_col = \"id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First: b751b9ef-2b6f-4678-9908-718bf93d7089\tLast: 01d133c2-d7ee-4808-906f-4601b9f285fe\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Since after we delete session_end, i decided to do here the first and last log-out\n",
+    "print(\"First: %s\\tLast: %s\" % (server_session.iloc[0][\"uuid\"], \\\n",
+    "                              server_session[server_session.session_end == server_session.session_end.max()].iloc[-1][\"uuid\"]))"
    ]
   },
   {
@@ -278,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CactusDuper'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uuid_db[uuid_db[\"uuid\"] == \"6d026b92-5b15-4555-84fd-db4d1162eac9\"].iloc[0].nickname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -340,252 +379,151 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>uuid</th>\n",
+       "      <th>server_uuid</th>\n",
        "      <th>session_start</th>\n",
-       "      <th>time</th>\n",
+       "      <th>session_end</th>\n",
        "      <th>mob_kills</th>\n",
        "      <th>deaths</th>\n",
        "      <th>afk_time</th>\n",
-       "      <th>x_join</th>\n",
-       "      <th>x_left</th>\n",
-       "      <th>y_join</th>\n",
-       "      <th>y_left</th>\n",
-       "      <th>z_join</th>\n",
-       "      <th>z_left</th>\n",
-       "      <th>name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>b751b9ef-2b6f-4678-9908-718bf93d7089</td>\n",
-       "      <td>2020-02-07 22:11:54</td>\n",
-       "      <td>25620.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>73</td>\n",
-       "      <td>73</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SalC1</td>\n",
+       "      <th>493196</th>\n",
+       "      <td>6d026b92-5b15-4555-84fd-db4d1162eac9</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586823817114</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>b751b9ef-2b6f-4678-9908-718bf93d7089</td>\n",
-       "      <td>2020-02-07 22:12:21</td>\n",
-       "      <td>3690.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>73</td>\n",
-       "      <td>73</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SalC1</td>\n",
+       "      <th>493197</th>\n",
+       "      <td>13ed27d3-b345-4bac-aae4-497d8e30dd9b</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586823378193</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>b751b9ef-2b6f-4678-9908-718bf93d7089</td>\n",
-       "      <td>2020-02-07 22:51:01</td>\n",
-       "      <td>3124.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>73</td>\n",
-       "      <td>73</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SalC1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>f2b5fb77-1b63-422d-851f-c3bbd6b0c418</td>\n",
-       "      <td>2020-02-07 23:43:34</td>\n",
-       "      <td>5205.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>22</td>\n",
-       "      <td>70</td>\n",
-       "      <td>69</td>\n",
-       "      <td>126</td>\n",
-       "      <td>127</td>\n",
-       "      <td>BoatMeat</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6b1bcae8-d43a-41ee-a74e-0391fc8a3541</td>\n",
-       "      <td>2020-02-07 23:44:03</td>\n",
-       "      <td>278.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-75</td>\n",
-       "      <td>-75</td>\n",
-       "      <td>85</td>\n",
-       "      <td>85</td>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
-       "      <td>8chan_</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>493198</th>\n",
+       "      <td>c0ce433b-c1de-4535-a2e5-4a22e621759d</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586823381429</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493199</th>\n",
        "      <td>01d133c2-d7ee-4808-906f-4601b9f285fe</td>\n",
-       "      <td>2020-04-14 02:30:30</td>\n",
-       "      <td>213146.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>spit4520</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586824230518</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493200</th>\n",
        "      <td>6d026b92-5b15-4555-84fd-db4d1162eac9</td>\n",
-       "      <td>2020-04-14 02:23:37</td>\n",
-       "      <td>626550.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CactusDuper</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586823817114</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493201</th>\n",
        "      <td>13ed27d3-b345-4bac-aae4-497d8e30dd9b</td>\n",
-       "      <td>2020-04-14 02:16:18</td>\n",
-       "      <td>1065471.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>WittleRain</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586823378193</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493202</th>\n",
        "      <td>c0ce433b-c1de-4535-a2e5-4a22e621759d</td>\n",
-       "      <td>2020-04-14 02:16:21</td>\n",
-       "      <td>1062235.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>mcrcortex</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586823381429</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493203</th>\n",
        "      <td>01d133c2-d7ee-4808-906f-4601b9f285fe</td>\n",
-       "      <td>2020-04-14 02:30:30</td>\n",
-       "      <td>213146.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>spit4520</td>\n",
+       "      <td>61326e77-a38f-442e-a4da-4e105b26b8ae</td>\n",
+       "      <td>1586824230518</td>\n",
+       "      <td>1586824443664</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>493203 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                        uuid       session_start       time  \\\n",
-       "1       b751b9ef-2b6f-4678-9908-718bf93d7089 2020-02-07 22:11:54    25620.0   \n",
-       "2       b751b9ef-2b6f-4678-9908-718bf93d7089 2020-02-07 22:12:21     3690.0   \n",
-       "3       b751b9ef-2b6f-4678-9908-718bf93d7089 2020-02-07 22:51:01     3124.0   \n",
-       "4       f2b5fb77-1b63-422d-851f-c3bbd6b0c418 2020-02-07 23:43:34     5205.0   \n",
-       "5       6b1bcae8-d43a-41ee-a74e-0391fc8a3541 2020-02-07 23:44:03      278.0   \n",
-       "...                                      ...                 ...        ...   \n",
-       "493199  01d133c2-d7ee-4808-906f-4601b9f285fe 2020-04-14 02:30:30   213146.0   \n",
-       "493200  6d026b92-5b15-4555-84fd-db4d1162eac9 2020-04-14 02:23:37   626550.0   \n",
-       "493201  13ed27d3-b345-4bac-aae4-497d8e30dd9b 2020-04-14 02:16:18  1065471.0   \n",
-       "493202  c0ce433b-c1de-4535-a2e5-4a22e621759d 2020-04-14 02:16:21  1062235.0   \n",
-       "493203  01d133c2-d7ee-4808-906f-4601b9f285fe 2020-04-14 02:30:30   213146.0   \n",
+       "                                        uuid  \\\n",
+       "id                                             \n",
+       "493196  6d026b92-5b15-4555-84fd-db4d1162eac9   \n",
+       "493197  13ed27d3-b345-4bac-aae4-497d8e30dd9b   \n",
+       "493198  c0ce433b-c1de-4535-a2e5-4a22e621759d   \n",
+       "493199  01d133c2-d7ee-4808-906f-4601b9f285fe   \n",
+       "493200  6d026b92-5b15-4555-84fd-db4d1162eac9   \n",
+       "493201  13ed27d3-b345-4bac-aae4-497d8e30dd9b   \n",
+       "493202  c0ce433b-c1de-4535-a2e5-4a22e621759d   \n",
+       "493203  01d133c2-d7ee-4808-906f-4601b9f285fe   \n",
        "\n",
-       "        mob_kills  deaths  afk_time x_join x_left y_join y_left z_join z_left  \\\n",
-       "1             0.0     0.0       0.0     32     32     73     73      1      1   \n",
-       "2             0.0     0.0       0.0     32     32     73     73      1      1   \n",
-       "3             0.0     0.0       0.0     32     32     73     73      1      1   \n",
-       "4             0.0     0.0       0.0     24     22     70     69    126    127   \n",
-       "5             0.0     0.0       0.0    -75    -75     85     85     45     45   \n",
-       "...           ...     ...       ...    ...    ...    ...    ...    ...    ...   \n",
-       "493199        0.0     0.0       0.0    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "493200        0.0     0.0       0.0    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "493201        0.0     0.0       0.0    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "493202        0.0     0.0       0.0    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "493203        0.0     0.0       0.0    NaN    NaN    NaN    NaN    NaN    NaN   \n",
+       "                                 server_uuid  session_start    session_end  \\\n",
+       "id                                                                           \n",
+       "493196  61326e77-a38f-442e-a4da-4e105b26b8ae  1586823817114  1586824443664   \n",
+       "493197  61326e77-a38f-442e-a4da-4e105b26b8ae  1586823378193  1586824443664   \n",
+       "493198  61326e77-a38f-442e-a4da-4e105b26b8ae  1586823381429  1586824443664   \n",
+       "493199  61326e77-a38f-442e-a4da-4e105b26b8ae  1586824230518  1586824443664   \n",
+       "493200  61326e77-a38f-442e-a4da-4e105b26b8ae  1586823817114  1586824443664   \n",
+       "493201  61326e77-a38f-442e-a4da-4e105b26b8ae  1586823378193  1586824443664   \n",
+       "493202  61326e77-a38f-442e-a4da-4e105b26b8ae  1586823381429  1586824443664   \n",
+       "493203  61326e77-a38f-442e-a4da-4e105b26b8ae  1586824230518  1586824443664   \n",
        "\n",
-       "               name  \n",
-       "1             SalC1  \n",
-       "2             SalC1  \n",
-       "3             SalC1  \n",
-       "4          BoatMeat  \n",
-       "5            8chan_  \n",
-       "...             ...  \n",
-       "493199     spit4520  \n",
-       "493200  CactusDuper  \n",
-       "493201   WittleRain  \n",
-       "493202    mcrcortex  \n",
-       "493203     spit4520  \n",
-       "\n",
-       "[493203 rows x 13 columns]"
+       "        mob_kills  deaths  afk_time  \n",
+       "id                                   \n",
+       "493196          0       0         0  \n",
+       "493197          0       0         0  \n",
+       "493198          0       0         0  \n",
+       "493199          0       0         0  \n",
+       "493200          0       0         0  \n",
+       "493201          0       0         0  \n",
+       "493202          0       0         0  \n",
+       "493203          0       0         0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "server_session"
+    "server_session[server_session.session_end == server_session.session_end.max()]"
    ]
   },
   {
